Allow members of the PIREP role to call command for others, fix JSP
git-svn-id: file:///home/svn/DVA2006@5950 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a